--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:support-v13:23.4.0'
 }
