--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:support-v13:23.4.0'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'
 }
